# rabimongo

./: authors.json  docker-compose.yaml  main.py  main_consumer.py  main_producer.py  pyproject.toml  requirements.txt
src/: consumer.py  import.py  import_data.py  models.py  producer.py  select_data.py
