[tool.poetry]
name = "rabimongo"
version = "0.1.0"
description = ""
authors = ["Dmytro Tarasenko <ug.dotenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.2"
mongoengine = "^0.28.2"
sqlalchemy = "^2.0.28"
rabbitmq = "^0.2.0"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
